[package]
name = "octave-lsp-server"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/LucasFA/octave-lsp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server = "0.6.0"
serde = "1.0.143"
serde_json = "1.0.83"
lsp-types = "0.93.0"