[package]
name = "hir"
version = "0.1.0"
edition = "2021"
authors = ["Lucas Fehlau Arbulu"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
la-arena = "0.3.0"
smol_str = "0.2.0"
ast = {path = "../ast"}
syntax = {path = "../syntax"}

[dev-dependencies]
parser = {path = "../parser"}