[package]
name = "lexer"
version = "0.1.0"
edition = "2021"
authors = ["Lucas Fehlau Arbulu"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
text-size = "1.1.0"
strum = "0.24.1"
strum_macros = "0.24.3"
num-derive = "0.3.3"
num-traits = "0.2.15"