[package]
name = "lexer"
version = "0.1.0"
edition = "2024"
authors = ["Lucas Fehlau Arbulu"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
text-size = "1.1.0"
strum = "0.27.2"
strum_macros = "0.27.2"
num_enum = "0.7.5"
num_enum_derive = "0.7.5"
