[package]
name = "octave-lsp"
version = "0.1.0"
edition = "2024"
authors = ["Lucas Fehlau Arbulu"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = {path = "../ast"}
hir = {path = "../hir"}
parser = {path = "../parser"}

