[package]
name = "octave-lsp"
version = "0.1.0"
edition = "2024"
authors = ["Lucas Fehlau Arbulu"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
ast = {path = "../ast"}
hir = {path = "../hir"}
lsp-server = "0.7.9"
lsp-types = "0.97.0"
parser = {path = "../parser"}
serde_json = "1.0.150"

