[package]
name = "parser"
version = "0.1.0"
edition = "2024"
authors = ["Lucas Fehlau Arbulu"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
drop_bomb = "0.1.5"
lexer = {path = "../lexer"}
rowan = "0.15.11"
syntax = {path = "../syntax"}
text-size = "1.1.0"

[dev-dependencies]
expect-test = "1.4.1"
