[package]
name = "syntax"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = {path = "../lexer"}
num-derive = "0.3.3"
num-traits = "0.2.15"
rowan = "0.15.10"
strum = "0.24.1"
strum_macros = "0.24.3"
